# position-stock-scaner

./: .gitignore  AGENTS.md  README.md  优化策略-AI深度分析-操盘有效性.md
3.1重构版/: OPTIMIZE_TODO.md  README.md  config.json  pyproject.toml  requirements.txt  start.sh
3.1重构版/docs/: DESIGN-workflow-shell.md  states.md  wireframe-workflow-shell.html
3.1重构版/docs/wireframes/: chart-column.html
3.1重构版/scripts/: test-browser-modules.mjs
3.1重构版/src/: run.py
3.1重构版/src/api/: analyze_routes.py  auth.py  extra_routes.py  patrol_routes.py  review_routes.py  routes.py  schemas.py  screener_routes.py  signal_routes.py
3.1重构版/src/config/: __init__.py  _settings.py  defaults.py
3.1重构版/src/core/: __init__.py  analyzer.py  backtest.py  bottleneck_kb.py  bottleneck_strategy.py  chanlun.py  events.py  fundamental.py  indicators.py  news_monitor.py  patrol.py  prepost_review.py  quant_signals.py  screener.py  signal_explainer.py  signals.py  stock_cache.py  strategy_generator.py  today_prediction.py
3.1重构版/src/data/: __init__.py  akshare.py  baidu.py  base.py  company_info.py  eastmoney.py  eastmoney_http.py  industry.py  market_sentiment.py  news.py  news_sources.py  registry.py  sina_kline.py  tencent.py  tencent_kline.py  ths.py
3.1重构版/src/repository/: __init__.py  stock_repo.py
3.1重构版/src/storage/: patrol_repo.py  sqlite_db.py  stock_basic_repo.py  stock_kline_repo.py  stock_weekly_repo.py  watchlist_repo.py
3.1重构版/src/util/: retry.py  trading_calendar.py  ttl_cache.py
3.1重构版/templates/: index-patrol.html  index-scan.html  index-signals.html  index.html
(+39 files in other folders)
