[project]
name = "stock-scanner-3.1"
version = "3.1.0"
description = "AI-enhanced stock analysis system v3.1 refactored"
requires-python = ">=3.10"
dependencies = [
    "flask>=2.2,<3.1",
    "flask-cors>=4.0,<5.0",
    "werkzeug>=2.2,<3.1",
    "pandas>=2.0,<3.0",
    "numpy>=1.24,<2.0",
    "akshare>=1.13,<2.0",
    "openai>=0.28,<2.0",
    "anthropic>=0.20,<1.0",
    "zhipuai>=2.0,<3.0",
    "requests>=2.31,<3.0",
    "urllib3>=1.26,<3.0",
    "curl_cffi>=0.6.0",
    "python-dateutil>=2.8",
    "pytz>=2023.3",
    "jinja2>=3.1,<4.0",
    "markupsafe>=2.1,<3.0",
    "itsdangerous>=2.1,<3.0",
    "click>=8.1,<9.0",
    "plotly>=5.18,<6.0",
    "gunicorn>=21,<23",
    "python-dotenv>=1.0,<2.0",
]
